@@ -1,5 +1,5 @@
-/* Close a handle opened by `dlopen'.
-   Copyright (C) 1995-2021 Free Software Foundation, Inc.
+/* Check the usability of <dlfcn.h> functions in audit modules.
+   Copyright (C) 2022 Free Software Foundation, Inc.
    This file is part of the GNU C Library.
 
    The GNU C Library is free software; you can redistribute it and/or
@@ -16,22 +16,20 @@
    License along with the GNU C Library; if not, see
    <https://www.gnu.org/licenses/>.  */
 
-#include <dlfcn.h>
-#include <ldsodefs.h>
-#include <shlib-compat.h>
+#include <gnu/lib-names.h>
 
-int
-__dlclose (void *handle)
+#include <support/check.h>
+#include <support/xdlfcn.h>
+
+static int
+do_test (void)
 {
-#ifdef SHARED
-  if (GLRO (dl_dlfcn_hook) != NULL)
-    return GLRO (dl_dlfcn_hook)->dlclose (handle);
-#endif
+  /* Check that the audit module has been loaded.  */
+  void *handle = xdlopen ("mapped to libc", RTLD_LOCAL | RTLD_NOW);
+  TEST_VERIFY (handle
+	       == xdlopen (LIBC_SO, RTLD_LOCAL | RTLD_NOW | RTLD_NOLOAD));
 
-  return _dlerror_run (GLRO (dl_close), handle) ? -1 : 0;
+  return 0;
 }
-versioned_symbol (libc, __dlclose, dlclose, GLIBC_2_34);
 
-#if OTHER_SHLIB_COMPAT (libdl, GLIBC_2_0, GLIBC_2_34)
-compat_symbol (libdl, __dlclose, dlclose, GLIBC_2_0);
-#endif
+#include <support/test-driver.c>
